第二次提交

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./static/iconfont/iconfont.css">
+		<link rel="stylesheet" href="./static/iconfont1/iconfont.css">
     <title>xinhuo</title>
   </head>
   <body>
